<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_analyze_data_item_view"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:textColor="#333"
            android:textSize="17sp"
            tools:text="admin" />

        <TextView
            android:id="@+id/tv_stationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#000"
            android:textSize="17sp"
            tools:text="安保部" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/tv_reportIncidentNum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_arriveNum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_feedbackNum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_coverLineLength"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingTop="6dp">

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_reportIncidentNum" />

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_arriveNum" />

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_feedbackNum" />

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_coverLineLength" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:paddingTop="12dp">

        <TextView
            android:id="@+id/tv_onLineTimeSum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_onLineRoadSum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_onLineTimeDaySum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />

        <TextView
            android:id="@+id/tv_onLineRoadDaySum"
            style="@style/analyze_data_list_item_text_data"
            android:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_onLineTimeSum" />

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_onLineRoadSum" />


        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_onLineTimeDaySum" />

        <TextView
            style="@style/analyze_data_list_item_text"
            android:text="@string/string_onLineRoadDaySum" />
    </LinearLayout>
</LinearLayout>
