<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutOkCancel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/progressbar_blue"
        android:contentDescription="@string/text_image"
        android:minWidth="300dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/progressbar_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/default_text_blue"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/layout_focus_bg"
            android:gravity="center"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/default_text_blue"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/layout_focus_bg"
            android:gravity="center"
            android:minWidth="120dp"
            android:text="@string/text_ok" />
    </LinearLayout>

</LinearLayout>